list items removed for pictures

--- a/index.html
+++ b/index.html
@@ -62,44 +62,34 @@
 
       <section>
         <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="images/img1.jpg"
-              width="128"
-              alt="Mark Guerrero,Product Designer"
-            />
-            <h3>Mark Guerrero</h3>
-            <h4>Product Designer</h4>
-          </li>
-          <li>
-            <img
-              src="images/img2.jpg"
-              width="128"
-              alt="Tom Ford,Frontend Developer"
-            />
-            <h3>Tom Ford</h3>
-            <h4>Frontend Developer</h4>
-          </li>
-          <li>
-            <img
-              src="images/img3.jpg"
-              width="128"
-              alt="Camila Garcia,Marketing"
-            />
-            <h3>Camilla Garcia</h3>
-            <h4>Marketing</h4>
-          </li>
-          <li>
-            <img
-              src="images/img4.jpg"
-              width="128"
-              alt="Daniel Wilson,UI Designer"
-            />
-            <h3>Daniel Wilson</h3>
-            <h4>UI Designer</h4>
-          </li>
-        </ul>
+
+        <img
+          src="images/img1.jpg"
+          width="128"
+          alt="Mark Guerrero,Product Designer"
+        />
+        <h3>Mark Guerrero</h3>
+        <h4>Product Designer</h4>
+
+        <img
+          src="images/img2.jpg"
+          width="128"
+          alt="Tom Ford,Frontend Developer"
+        />
+        <h3>Tom Ford</h3>
+        <h4>Frontend Developer</h4>
+
+        <img src="images/img3.jpg" width="128" alt="Camila Garcia,Marketing" />
+        <h3>Camilla Garcia</h3>
+        <h4>Marketing</h4>
+
+        <img
+          src="images/img4.jpg"
+          width="128"
+          alt="Daniel Wilson,UI Designer"
+        />
+        <h3>Daniel Wilson</h3>
+        <h4>UI Designer</h4>
       </section>
     </main>
     <!--sitemin orta alanı bitti-->
