--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         <button type="button">Order Servis</button>
 
         <ul>
-          <li>Strategy</li>
+          <li><h3>Strategy</h3></li>
         </ul>
         <p>
           Our goal is to identify the business problem to walk away with the
           perfect and creative solution.
         </p>
         <ul>
-          <li>Punctuality</li>
+          <li><h3>Punctuality</h3></li>
         </ul>
         <p>
           Bring the key message to the brand's audience for the best price
           within the shortest possible time.
         </p>
         <ul>
-          <li>Diligence</li>
+          <li><h3>Diligence</h3></li>
         </ul>
         <p>
           Research and confirm brands that present the strongest digital growth
           opportunities and minimize risk.
         </p>
         <ul>
-          <li>Technologies</li>
+          <li><h3>Technologies</h3></li>
         </ul>
         <p>
           Design practice focused on digital experiences. We bring forth a deep
@@ -68,28 +68,28 @@
           width="128"
           alt="Mark Guerrero,Product Designer"
         />
-        <h3>Mark Guerrero</h3>
-        <h4>Product Designer</h4>
+        <h4>Mark Guerrero</h4>
+        <h5>Product Designer</h5>
 
         <img
           src="images/img2.jpg"
           width="128"
           alt="Tom Ford,Frontend Developer"
         />
-        <h3>Tom Ford</h3>
-        <h4>Frontend Developer</h4>
+        <h4>Tom Ford</h4>
+        <h5>Frontend Developer</h5>
 
         <img src="images/img3.jpg" width="128" alt="Camila Garcia,Marketing" />
-        <h3>Camilla Garcia</h3>
-        <h4>Marketing</h4>
+        <h4>Camilla Garcia</h4>
+        <h5>Marketing</h5>
 
         <img
           src="images/img4.jpg"
           width="128"
           alt="Daniel Wilson,UI Designer"
         />
-        <h3>Daniel Wilson</h3>
-        <h4>UI Designer</h4>
+        <h4>Daniel Wilson</h4>
+        <h5>UI Designer</h5>
       </section>
     </main>
     <!--sitemin orta alanı bitti-->
