--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
   <body>
     <!--sitemin header alanı-->
     <header>
-      <a href="logo" target="_blank">WEB STUDIO</a>
+      <a href="https://www.google.com">WEB STUDIO</a>
       <nav>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a>Studio</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <p>info@devstudio.com+11</p>
-        <p>(000) 111-11-11</p>
+        <ul>
+          <li>info@devstudio.com</li>
+          <li>(000) 111-11-11<</li>
+        </ul>
       </address>
     </header>
     <!--sitemin header alanı bitti-->
@@ -28,32 +30,31 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Servis</button>
+        <button type="button">Order Service</button>
 
-        <ul>
-          <li><h3>Strategy</h3></li>
-        </ul>
+        <h2>Strategy</h2>
+
         <p>
           Our goal is to identify the business problem to walk away with the
           perfect and creative solution.
         </p>
-        <ul>
-          <li><h3>Punctuality</h3></li>
-        </ul>
+
+        <h2>Punctuality</h2>
+
         <p>
           Bring the key message to the brand's audience for the best price
           within the shortest possible time.
         </p>
-        <ul>
-          <li><h3>Diligence</h3></li>
-        </ul>
+
+        <h2>Diligence</h2>
+
         <p>
           Research and confirm brands that present the strongest digital growth
           opportunities and minimize risk.
         </p>
-        <ul>
-          <li><h3>Technologies</h3></li>
-        </ul>
+
+        <h2>Technologies</h2>
+
         <p>
           Design practice focused on digital experiences. We bring forth a deep
           passion for problem-solving.
@@ -68,16 +69,16 @@
           width="128"
           alt="Mark Guerrero,Product Designer"
         />
-        <h4>Mark Guerrero</h4>
-        <h5>Product Designer</h5>
+        <h3>Mark Guerrero</h3>
+        <h4>Product Designer</h4>
 
         <img
           src="images/img2.jpg"
           width="128"
           alt="Tom Ford,Frontend Developer"
         />
-        <h4>Tom Ford</h4>
-        <h5>Frontend Developer</h5>
+        <h3>Tom Ford</h3>
+        <h4>Frontend Developer</h4>
 
         <img src="images/img3.jpg" width="128" alt="Camila Garcia,Marketing" />
         <h4>Camilla Garcia</h4>
@@ -88,15 +89,15 @@
           width="128"
           alt="Daniel Wilson,UI Designer"
         />
-        <h4>Daniel Wilson</h4>
-        <h5>UI Designer</h5>
+        <h3>Daniel Wilson</h3>
+        <h4>UI Designer</h4>
       </section>
     </main>
     <!--sitemin orta alanı bitti-->
     <!--sitemin son kısmı-->
 
     <footer>
-      <a href="logo" target="_blank">WEB STUDIO</a>
+      <a href="https://www.google.com">WEB STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
