--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <!--sitemin header alanı-->
     <header>
-      <a href="https://www.google.com">WEB STUDIO</a>
+      <a href="/">WEB STUDIO</a>
       <nav>
         <ul>
-          <li><a>Studio</a></li>
-          <li><a>Portfolio</a></li>
-          <li><a>Contacts</a></li>
+          <li><a href="/">Studio</a></li>
+          <li><a href="/">Portfolio</a></li>
+          <li><a href="/">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li>info@devstudio.com</li>
-          <li>(000) 111-11-11<</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>(000) 111-11-11</li>
         </ul>
       </address>
     </header>
@@ -97,7 +97,7 @@
     <!--sitemin son kısmı-->
 
     <footer>
-      <a href="https://www.google.com">WEB STUDIO</a>
+      <a href="/">WEB STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
